<resources>

    <string name="app_name">FishDiary</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_tag">Tag</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_night_mode">Night Mode</string>
    <string name="menu_full_screen">Full Screen</string>
    <string name="menu_encrypt">Encrypt/Unencrypt</string>
    <string name="menu_export">Export</string>
    <string name="dialog_confirm_save">Save Note?</string>
    <string name="dialog_confirm_quit">Quit FishDiary?</string>
    <string name="dialog_confirm_delete">Delete Note?</string>
    <string name="dialog_create_tag">Create Tag</string>
    <string name="button_back">Back</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="button_add">Add</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_save">Save</string>
	<string name="button_setting">Setting</string>
    <string name="et_title_hint">Please input title</string>
    <string name="hint_encrypted">*** Encrypted ***</string>
    <string name="hint_note_saved">Note has been saved successfully.</string>
    <string name="error_title">Error</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="error_sdcard_unmount">SDCard not available.</string>
    <string name="error_failed_create_folder">Unable to Create folder on SDCard</string>
    <string name="pref_underline_enable_key">pref_underline_enable</string>
    <string name="pref_underline_enable">Enable Text Underline</string>
    <string name="pref_text_size_key">pref_text_size</string>
    <string name="pref_text_size">Text Size</string>
    <string name="pref_background_key">pref_background</string>
    <string name="pref_background">Background</string>
    <string name="pref_category_text_key">pref_category_text</string>
    <string name="pref_category_text">Text Settings</string>
    <string name="pref_category_general_key">pref_category_general</string>
    <string name="pref_category_general">General Settings</string>
    <string name="pref_restore_key">pref_restore</string>
    <string name="pref_restore">Restore Default Settings</string>
    <string name="pref_restore_text">Restore Default Settings?</string>
    <string name="pref_passwd_key">pref_passwd</string>
    <string name="pref_passwd">Set Password</string>
    <string name="pref_passwd_summary">Encrypt Note</string>
    <string name="pref_about_key">pref_about</string>
    <string name="pref_about_summary">About FishDiary, Send feedback message.</string>
    <string name="pref_about">About</string>
    <string name="tv_input_passwd">Input password</string>
    <string name="tv_input_author">Input author name</string>
    <string name="text_welcome">Welcome To FishDiary</string>
    <string name="text_passwd_confirm">Are you sure to save password? Password input: </string>
    <string name="text_passwd_incorrect">Incorrect password!</string>
    <string name="text_exported">Notes exported to: </string>
    <string name="text_effect">Background Image Effect</string>
    <string name="text_author_saved">Author name saved</string>
    <string name="text_tag_added">Tag added.</string>
    <string name="text_copied">Text copied to clipboard.</string>
    <string name="text_restored_success">Settings restored.</string>
    <string name="pref_category_myNote_key">pref_category_myNote</string>
    <string name="pref_category_myNote">My FishDiary</string>
    <string name="pref_image_key">pref_image</string>
    <string name="pref_image">Image</string>
    <string name="pref_author_key">pref_author</string>
    <string name="pref_author">Author</string>
    <string name="pref_author_default">FishDiary</string>
    <string name="pref_author_summary">Author name</string>
    <string name="export_text_createAt">Create At: </string>
    <string name="export_text_modifyAt">Modified At: </string>
    <string name="export_text_tag">Tag: </string>
    <string name="export_text_author">Author: </string>
    <string name="export_text_encrypt">Encrypted: </string>
    <string name="intent_chooser_image">Choose Image</string>
    <string name="intent_chooser_mail">Send Feedback Message</string>
    <string name="intent_chooser_view">View site</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="string_forward">Forward:</string>
    <string name="string_back">Back:</string>

    <string-array name="text_effect_choices">
        <item name="text_effect_none">No effect</item>
        <item name="text_effect_feather">Feather effect</item>
        <item name="text_effect_reflect">Reflect effect</item>
    </string-array>

</resources>