<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="@drawable/header_bg"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_back"
            style="@style/BtnStyle"
            android:background="@drawable/splash_button"
            android:text="@string/button_back"
            android:textColor="#ff000000" >
        </Button>

        <EditText
            android:id="@+id/et_title"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="2dip"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/et_title_hint"
            android:maxLength="25"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_save"
            style="@style/BtnStyle"
            android:background="@drawable/splash_button_white"
            android:text="@string/button_save"
            android:textColor="#ff000000" >
        </Button>
    </LinearLayout>

    <com.flounder.fishDiary.view.LinedEditText
        android:id="@+id/et_story"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/default_background"
        android:gravity="top|left"
        android:lineSpacingMultiplier="1.2"
        android:paddingLeft="8dip"
        android:paddingRight="8dip"
        android:paddingTop="5dip"
        android:scrollbars="vertical"
        android:textCursorDrawable="@null" />

</LinearLayout>