<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="@drawable/header_bg"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/image"
            android:layout_width="40dip"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"
            android:padding="4dip" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="8dip"
            android:layout_marginTop="5dip"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="#ff363636"
            android:textSize="18sp" />
        <Button
            android:id="@+id/btn_setting"
            style="@style/BtnStyle"
            android:background="@drawable/splash_button_white"
            android:text="@string/button_setting"
            android:textColor="#ff000000" />
        <Button
            android:id="@+id/btn_add"
            style="@style/BtnStyle"
            android:background="@drawable/splash_button_white"
            android:text="@string/button_add"
            android:textColor="#ff000000" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/default_background"
        android:divider="@drawable/divider"
        android:dividerHeight="1dp"
        android:drawSelectorOnTop="false"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical" />

</LinearLayout>